fix a nox bug where the  UI wasn't being built for the dev container

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ init_typed = true
 warn_required_dynamic_aliases = true
 warn_untyped_fields = true
 
-[mypy-src.fidesops._version]
+[mypy-src.fidesctl._version]
 ignore_errors = true
 
 [[tool.mypy.overrides]]
